<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/calculator">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout1"
        android:layout_marginLeft="10pt"
        android:layout_marginRight="10pt"
        android:layout_marginTop="3pt">

        <EditText
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginRight="5pt"
            android:id="@+id/etNum1"
            android:layout_width="match_parent"
            android:inputType="numberDecimal">
        </EditText>
        <EditText
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="5pt"
            android:id="@+id/etNum2"
            android:layout_width="match_parent"
            android:inputType="numberDecimal">
        </EditText>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20pt"
            android:layout_marginRight="20pt"
            android:gravity="center_horizontal"
            android:text="Result"
            android:textSize="12pt"
            android:layout_below="@+id/btnSub"
            android:layout_alignParentStart="true"
            android:layout_marginStart="26dp">

        </TextView>

        <Button
            android:id="@+id/btnDiv"
            android:layout_width="20pt"
            android:layout_height="20pt"
            android:layout_alignBaseline="@+id/btnMul"
            android:layout_alignBottom="@+id/btnMul"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="60pt"
            android:layout_marginRight="60pt"
            android:layout_marginStart="60dp"
            android:text="/"
            android:textSize="8pt"></Button>

        <Button
            android:id="@+id/btnMul"
            android:layout_width="20pt"
            android:layout_height="20pt"
            android:layout_marginLeft="60pt"
            android:layout_marginRight="60pt"
            android:layout_marginTop="5pt"
            android:text="*"
            android:textSize="8pt"></Button>

        <Button
            android:id="@+id/btnSub"
            android:layout_width="20pt"
            android:layout_height="20pt"
            android:layout_below="@+id/btnMul"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="60pt"
            android:layout_marginRight="60pt"
            android:layout_marginTop="20dp"
            android:text="-"
            android:textSize="8pt"></Button>

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="20pt"
            android:layout_height="20pt"
            android:layout_below="@+id/btnMul"
            android:layout_marginLeft="60pt"
            android:layout_marginRight="60pt"
            android:layout_marginStart="85dp"
            android:layout_marginTop="20dp"
            android:text="+"
            android:textSize="8pt"></Button>
    </RelativeLayout>


</LinearLayout>
